tests/failures/handle_name_invalid_ident.stderr
error: cannot find macro `dyn_inventory` in this scope
  --> tests/failures/handle_name_invalid_ident.rs:12:1
   |
12 | dyn_inventory!(
   | ^^^^^^^^^^^^^
   |
   = note: `dyn_inventory` is in scope, but it is a crate, not a macro
help: consider importing this macro
   |
12 + use dyn_inventory::dyn_inventory;
   |
