tests/failures/handle_name_invalid_ident.rs
// invalid identifier for handle_name
//
//
//
//
//
//
//
//
//

dyn_inventory!(
    TraitB: StructB<T> {
        a: bool,
        t: T,
    };
    handle_name = My-Handle,
);

fn main() {}
